--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=SecurityPlayground
 server.port=8082
 logging.level.org.springframework.security=DEBUG
-spring.security.oauth2.client.registration.github.clientID=Ov23li1eEzWOHOMdxqkD
-spring.security.oauth2.client.registration.github.clientSecret=f734dbb04a5cd279da0e09041eacda4573f94538
+#spring.security.oauth2.client.registration.github.clientID=Ov23li1eEzWOHOMdxqkD
+#spring.security.oauth2.client.registration.github.clientSecret=f734dbb04a5cd279da0e09041eacda4573f94538
+spring.security.oauth2.client.registration.github.clientID=Ov23liYQrlG0H8xWhTnw
+spring.security.oauth2.client.registration.github.clientSecret=efdbb748371407412dfa25327b9b4c88cd339a05
